--- a/Bibliography.html
+++ b/Bibliography.html
@@ -121,6 +121,19 @@
         </ul>
       </div>
 
+      <p><strong>Mapa interactivo:</strong></p>
+        
+        <ul>
+          <li>El mapa interactivo muestra eventos importantes que pasaron en el UCM dentro de estados Unidos, este 
+            se desarolló usando solo HTML, CSS Y JS, creando ventanas emergentes (popup) este se compone de pin (los cuales
+            estan ubicados en el mapa) y el popu (el cual aparece cuando se pone el cursor encima de este pin) cada pin
+            hace referencia al simbolo de un superheroe de marvel, el cual está vinculado con alguna historia que pasó en 
+            ese estado, para ver el mapa, puedes <a  class="a_enlace" href="Map.html">dar click aquí</a>
+            </li>
+          
+        </ul>
+      </div>
+
 
     </div>
 
