--- a/Map.html
+++ b/Map.html
@@ -67,19 +67,64 @@
       </div>
 
       <!-- Columna derecha del contenido -->
-      <div class="columna columna-derecha">
+      <div class="columna2 columna-derecha">
         <div class="map_style">
-          <img class="style_img_der" src="Images/Map/Map.jpg" alt=""> 
+          <img class="style_img_der" src="Images/Map/Map.jpg" alt="">
           <div class="pin-Cap" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Iron" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Thor" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Loki" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Ave" id="Av1" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Ave" id="Av2" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Ant" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Black" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
-          <div class="pin-Spiderman" onmouseover="showPopUp(1)" onmouseout="hidePopUp(1)"></div>
+          <div class="pin-Iron" onmouseover="showPopUp(3)" onmouseout="hidePopUp(3)"></div>
+          <div class="pin-Thor" onmouseover="showPopUp(4)" onmouseout="hidePopUp(4)"></div>
+          <div class="pin-Loki" onmouseover="showPopUp(2)" onmouseout="hidePopUp(2)"></div>
+          <div class="pin-Ave" id="Av1" onmouseover="showPopUp(6)" onmouseout="hidePopUp(6)"></div>
+          <div class="pin-CapMar" onmouseover="showPopUp(8)" onmouseout="hidePopUp(8)"></div>
+          <div class="pin-Ant" onmouseover="showPopUp(9)" onmouseout="hidePopUp(9)"></div>
+          <div class="pin-Black" onmouseover="showPopUp(5)" onmouseout="hidePopUp(5)"></div>
+          <div class="pin-Spiderman" onmouseover="showPopUp(7)" onmouseout="hidePopUp(7)"></div>
 
+          <div class="popup" id="popup1">
+            <h4>Washington</h4>
+            Acá se desarrollan los eventos de Capitan america y el Soldado del invierno.
+          </div>
+
+          <div class="popup" id="popup2">
+            <h4>Nevada</h4>
+            Loki termina en este desierto por el Terseracto.
+          </div>
+
+          <div class="popup" id="popup3">
+            <h4>California</h4>
+            Tony Stark (Iron Man) se enfrenta contra Obadiah Stane.
+          </div>
+
+          <div class="popup" id="popup4">
+            <h4>Nuevo Mexico</h4>
+            Thor es desterrado a la Tierra y aterriza en el desierto de Nuevo México, donde es encontrado por Jane Foster y su equipo de científicos.
+          </div>
+
+
+          <div class="popup" id="popup5">
+            <h4>Ohio</h4>
+            Pasado de Natasha como una espía soviética infiltrada en una familia falsa en Ohio durante los años 90.
+          </div>
+
+          <div class="popup" id="popup6">
+            <h4>New York</h4>
+            La gran batalla de los vengadores contra el ejercito de Chitauris
+          </div>
+
+          <div class="popup" id="popup7">
+            <h4>Nueva Jersey</h4>
+            Después de enterarse del tráfico de armas, Spider-Man llega al ferry para detener la transacción y atrapar a los traficantes
+          </div>
+
+          <div class="popup" id="popup8">
+            <h4>Iowa</h4>
+            Carol Danvers se cría en Iowa antes de convertirse en piloto de la Fuerza Aérea y, eventualmente, en Captain Marvel
+          </div>
+
+          <div class="popup" id="popup9">
+            <h4>Georgia</h4>
+            Ant-Man, es reclutado por Hank Pym para robar un traje de Ant-Man y la tecnología relacionada en la instalación de Pym Technologies.
+          </div>
 
         </div>
       </div>
